added client id

--- a/NER-model.ipynb
+++ b/NER-model.ipynb
@@ -83,8 +83,8 @@
     "from transformers import BertTokenizer, BertForTokenClassification, pipeline\n",
     "\n",
     "# Set up PRAW with your Reddit app credentials\n",
-    "reddit = praw.Reddit(client_id='osjO-OqSVLhQYCvv95WhLw',\n",
-    "                     client_secret='7Qs6BM9criBAizA73dmwNLBi1EZ3Ig',\n",
+    "reddit = praw.Reddit(client_id=client_id,\n",
+    "                     client_secret=client_secret,\n",
     "                     user_agent=True)\n",
     "\n",
     "def scrape_reddit(city):\n",
